fixes height on safari bug

--- a/src/Layout/Feedback/Feedback.scss
+++ b/src/Layout/Feedback/Feedback.scss
@@ -57,7 +57,7 @@
         background-image: radial-gradient(
           circle 14px,
           #0d161b 100%,
-          transparent 0
+          white 0,
         );
         background-repeat: no-repeat;
         border-radius: 50%;
