--- a/src/Layout/Result/Result.scss
+++ b/src/Layout/Result/Result.scss
@@ -2,6 +2,7 @@
 
 .result {
   width: 100%;
+  max-height: calc(100 * var(--vh));
 
   .result_header {
     width: 100%;
